package apsara.odps.cupid.protocol;
option java_outer_classname = "SavePathsProtos";

message SavePaths
{
	repeated SavePathIterm savePathIterm = 1;
    optional string saveTempCapFile = 2;
}

message SavePathIterm
{
	required string tmpLocation = 1;
	required string ddlLocation = 2;
}

message CommitTaskRenameFileRequestParam
{
    required string taskattempid = 1;
    optional SavePaths savepaths = 2;
}

message RegisterWriteTableRequestParam
{
    required string schema = 1;
    required string fileLocation = 2;
    required string capabilityFile = 3;
}
